A few more ideas.

--- a/magic-grid.html
+++ b/magic-grid.html
@@ -24,9 +24,9 @@
 		Wind: Quickness/Agility, Recklessness
 		Earth: Conviction, Mistrust
 		Ice: Indifference, Smartness
-		Thunder: Hyperactiveness, Weirdness
-		Light:
-		Darkness: Egotism, 
+		Thunder: Hyperactiveness, Weirdness, Creativity
+		Light: Purity/Innocence/Ingenuity, Altruism/Faith
+		Darkness: Egotism, Panic/Paranoia
 		Poison: Lust, Mischief
 		*/
 	</script>
