Added a few icons and a few more ideas.

--- a/magic-grid.html
+++ b/magic-grid.html
@@ -7,13 +7,23 @@
 	<div class="grid">
 		<div class="spell">
 			<!--SPELL ICON GOES HERE-->
-			<img src="" />
+			<img src="aspects/hot.png" />
 			<span class="spell-name">Anger</span>
 		</div>
 		<div class="spell">
 			<!--SPELL ICON GOES HERE-->
-			<img src="" />
+			<img src="aspects/snowflake.png" />
 			<span class="spell-name">Indifference</span>
+		</div>
+		<div class="spell">
+			<!--SPELL ICON GOES HERE-->
+			<img src="aspects/raindrop.png" />
+			<span class="spell-name">Honesty</span>
+		</div>
+		<div class="spell">
+			<!--SPELL ICON GOES HERE-->
+			<img src="aspects/feather.png" />
+			<span class="spell-name">Quickness</span>
 		</div>
 	</div>
 	<script type="text/javascript">
@@ -28,6 +38,7 @@
 		Light: Purity/Innocence/Ingenuity, Altruism/Faith
 		Darkness: Egotism, Panic/Paranoia
 		Poison: Lust, Mischief
+		Magnetism: Attractiveness, Manipulation/Influence
 		*/
 	</script>
 </body>
