--- a/magic-grid.html
+++ b/magic-grid.html
@@ -40,6 +40,39 @@
 		Poison: Lust, Mischief
 		Magnetism: Attractiveness, Manipulation/Influence
 		*/
+		var fire = [
+			icon: "aspects/hot.png",
+			aspect1: "Anger",
+			aspect2: "Compassion"
+		];
+
+		var water = [
+			icon: "aspects/raindrop.png",
+			aspect1: "Arrogance",
+			aspect2: "Honesty"
+		];
+
+		var wind = [
+			icon: "aspects/feather.png",
+			aspect1: "Recklessness",
+			aspect2: "Quickness"
+		];
+
+		var ice = [
+			icon: "aspects/snowflake.png",
+			aspect1: "Smartness",
+			aspect2: "Indifference"
+		];
+
+		var spells = [
+			fire,
+			water,
+			wind,
+			ice
+		];
+
+		console.log(spells);
+
 	</script>
 </body>
 </html>
