--- a/magic-grid.html
+++ b/magic-grid.html
@@ -40,38 +40,52 @@
 		Poison: Lust, Mischief
 		Magnetism: Attractiveness, Manipulation/Influence
 		*/
-		var fire = [
+		var fire = {
 			icon: "aspects/hot.png",
 			aspect1: "Anger",
 			aspect2: "Compassion"
-		];
+		};
 
-		var water = [
+		var water = {
 			icon: "aspects/raindrop.png",
 			aspect1: "Arrogance",
 			aspect2: "Honesty"
-		];
+		};
 
-		var wind = [
+		var wind = {
 			icon: "aspects/feather.png",
 			aspect1: "Recklessness",
 			aspect2: "Quickness"
-		];
+		};
 
-		var ice = [
+		var earth = {
+			icon: "aspects/shoot.png",
+			aspect1: "Conviction",
+			aspect2: "Mistrust"
+		};
+
+		var ice = {
 			icon: "aspects/snowflake.png",
 			aspect1: "Smartness",
 			aspect2: "Indifference"
-		];
+		};
 
-		var spells = [
+		var thunder = {
+			icon: "aspects/bolt.png",
+			aspect1: "Hyperactivity",
+			aspect2: "Creativity"
+		};
+
+		var aspects = {
 			fire,
 			water,
 			wind,
-			ice
-		];
+			earth,
+			ice,
+			thunder
+		};
 
-		console.log(spells);
+		console.log(aspects);
 
 	</script>
 </body>
