--- a/magic-grid.html
+++ b/magic-grid.html
@@ -32,11 +32,11 @@
 		Fire: Anger, Compassion/Love
 		Water: Honesty, Arrogance
 		Wind: Quickness/Agility, Recklessness
-		Earth: Conviction, Mistrust
+		Earth: Conviction/Modesty, Mistrust
 		Ice: Indifference, Smartness
-		Thunder: Hyperactiveness, Weirdness, Creativity
-		Light: Purity/Innocence/Ingenuity, Altruism/Faith
-		Darkness: Egotism, Panic/Paranoia
+		Thunder: Hyperactivity, Weirdness, Creativity, Boldness
+		Light: Purity/Innocence/Ingenuity, Altruism/Faith/Kindness
+		Darkness: Egotism, Panic/Paranoia, Hate
 		Poison: Lust, Mischief
 		Magnetism: Attractiveness, Manipulation/Influence
 		*/
@@ -54,26 +54,50 @@
 
 		var wind = {
 			icon: "aspects/feather.png",
-			aspect1: "Recklessness",
-			aspect2: "Quickness"
+			aspect1: "Desperation",
+			aspect2: "Haste"
 		};
 
 		var earth = {
 			icon: "aspects/shoot.png",
-			aspect1: "Conviction",
-			aspect2: "Mistrust"
+			aspect1: "Mistrust",
+			aspect2: "Modesty"
 		};
 
 		var ice = {
 			icon: "aspects/snowflake.png",
-			aspect1: "Smartness",
-			aspect2: "Indifference"
+			aspect1: "Indifference",
+			aspect2: "Smartness"
 		};
 
 		var thunder = {
 			icon: "aspects/bolt.png",
 			aspect1: "Hyperactivity",
-			aspect2: "Creativity"
+			aspect2: "Boldness"
+		};
+
+		var light = {
+			icon: "aspects/lightbulb.png",
+			aspect1: "Ingenuity",
+			aspect2: "Kindness"
+		};
+
+		var darkness = {
+			icon: "aspects/night.png",
+			aspect1: "Hate",
+			aspect2: "Panic"
+		};
+
+		var poison = {
+			icon: "aspects/bug.png",
+			aspect1: "Mischief",
+			aspect2: "Lust"
+		};
+
+		var magnetism = {
+			icon: "aspects/clock.png",
+			aspect1: "Manipulation",
+			aspect2: "Charisma"
 		};
 
 		var aspects = {
