--- a/magic-grid.html
+++ b/magic-grid.html
@@ -111,7 +111,7 @@
 		for(var i = 0; i < aspects.length; i++) {
 			jQuery(".innergrid").append('<div class="aspect" id="'+aspects[i].id+'"><img src="'+aspects[i].icon+'" /><span class="aspect-name">'+aspects[i].aspect1+'</span></div>');
 
-			/*jQuery(".grid").append('<div class="aspect" id="'+aspects[i].id+'"><img src="'+aspects[i].icon+'" /><span class="aspect-name">'+aspects[i].aspect2+'</span></div>');*/
+			jQuery(".grid").append('<div class="aspect" id="'+aspects[i].id+'2"><img src="'+aspects[i].icon+'" /><span class="aspect-name">'+aspects[i].aspect2+'</span></div>');
 		}
 
 	</script>
