Just defining the last names.

--- a/character-list.html
+++ b/character-list.html
@@ -53,8 +53,9 @@
 		.hack - Mistral (Angel)
 		.hack G.U. - Alkaid (Female Thief)
 		Ar Tonelico - Mir (Female Mage)
-		Ar Tonelico 2 - 
-		Two more games
+		Ar Tonelico 2 - Leglius (Ninja)
+		Grandia 3 - Ulf (Imp)
+		Rogue Galaxy - Lilika (Female Knight) 
 		*/
 
 		var roster = [];
