--- a/character-list.html
+++ b/character-list.html
@@ -9,28 +9,27 @@
 	<div class="charlist"></div>
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
 	<script type="text/javascript">
-		function character() {
-			this.id = "";
-			this.name = "";
+		function character(name, job, race, imagemodel) {
+			this.name = name;
 			this.gender = "";
-			this.class = "";
-			this.race = "";
+			this.job = job;
+			this.race = race;
 			this.aspect = "";
 			this.weapon = "";
 			this.ability = "";
-			this.face = "";
-			this.battler = "";
-			this.sprite = "";
+			this.face = "chars/faces/"+imagemodel+".jpg";
+			this.battler = "chars/battlers/"+imagemodel+".png";
+			this.sprite = "chars/sprites/"+imagemodel+".png";
 		};
 
 		/*Name Homages:
 		Suikoden 1 - Odessa (Samurai)
 		Suikoden 2 - Neclord (Vampire)
 		Suikoden 3 - Bazba (Lizard)
-		Suikoden 4 - Ameria (Female Warrior)
+		Suikoden 4 - Helga (Female Warrior)
 		Suikoden 5 - Ferid (Male Thief)
 		Wild Arms 1 - Zed (Male Knight) 
-		Wild Arms 2 - Lilka (Female Cleric)
+		Wild Arms 2 - Marivel (Female Cleric)
 		Wild Arms 3 - Virginia (Fortune Teller)
 		Wild Arms 4 - Gawn (Gunner)
 		Wild Arms 5 - Fereydoon (Lancer)
@@ -60,121 +59,118 @@
 
 		var roster = [];
 
-		var ferid = new character();
-		ferid.name = "Ferid";
-		ferid.id = "ferid";
-		ferid.gender = "M";
-		ferid.class = "Thief";
-		ferid.race = "Human";
-		ferid.aspect = "Mistrust";
-		ferid.weapon = "Twin Daggers";
-		ferid.ability = "Stealth Attack";
-		ferid.face = "chars/faces/malethief.jpg";
-		ferid.battler = "chars/battlers/malethief.png";
-		ferid.sprite = "chars/sprites/malethief.png";
+		var albel = new character("albel", "Warrior", "Human", "king");
+		albel.gender = "M";
+		albel.aspect = "Arrogance";
+		albel.weapon = "Longsword";
+		albel.ability = "Morale Boost";
 
-		var lilka = new character();
-		lilka.name = "Lilka";
-		lilka.id = "lilka";
-		lilka.gender = "F";
-		lilka.class = "Cleric";
-		lilka.race = "Elf";
-		lilka.aspect = "Hyperactivity";
-		lilka.weapon = "Tri-Chain Staff";
-		lilka.ability = "Healing Beam";
-		lilka.face = "chars/faces/femalecleric.jpg";
-		lilka.battler = "chars/battlers/femalecleric.png";
-		lilka.sprite = "chars/sprites/femalecleric.png";
+		var alkaid = new character("alkaid", "Thief", "Human", "femalethief");
+		alkaid.gender = "F";
+		alkaid.aspect = "Mistrust";
+		alkaid.weapon = "Twin Daggers";
+		alkaid.ability = "Stealth Attack";
 
-		var duessel = new character();
-		duessel.name = "Duessel";
-		duessel.id = "duessel";
-		duessel.gender = "M";
-		duessel.class = "Warrior";
-		duessel.race = "Elf";
-		duessel.aspect = "Hate";
-		duessel.weapon = "Battleaxe";
-		duessel.ability = "Vicious Cut";
-		duessel.face = "chars/faces/malewarrior.jpg";
-		duessel.battler = "chars/battlers/malewarrior.png";
-		duessel.sprite = "chars/sprites/malewarrior.png";
+		var anise = new character("anise", "Monk", "Human", "femalemonk");
+		anise.gender = "F";
+		anise.aspect = "Mistrust";
+		anise.weapon = "Twin Daggers";
+		anise.ability = "Stealth Attack";
 
-		var muzet = new character();
-		muzet.name = "Muzet";
-		muzet.id = "muzet";
-		muzet.gender = "F";
-		muzet.class = "Shapeshifter";
-		muzet.race = "Fairy";
-		muzet.aspect = "Desperation";
-		muzet.weapon = "Magic Powder";
-		muzet.ability = "Makeover";
-		muzet.face = "chars/faces/fairy.jpg";
-		muzet.battler = "chars/battlers/fairy.png";
-		muzet.sprite = "chars/sprites/fairy.png";
+		var arche = new character("arche", "Archer", "Elf", "archer");
+		arche.gender = "F";
+		arche.aspect = "Mistrust";
+		arche.weapon = "Twin Daggers";
+		arche.ability = "Stealth Attack";
 
-		var neclord = new character();
-		neclord.name = "Neclord";
-		neclord.id = "neclord";
-		neclord.gender = "M";
-		neclord.class = "Drainer";
-		neclord.race = "Vampire";
-		neclord.aspect = "Mischief";
-		neclord.weapon = "Draining Gloves";
-		neclord.ability = "Bloodsuck";
-		neclord.face = "chars/faces/vampire.jpg";
-		neclord.battler = "chars/battlers/vampire.png";
-		neclord.sprite = "chars/sprites/vampire.png";
-
-		var elle = new character();
-		elle.name = "Elle";
-		elle.id = "elle";
-		elle.gender = "F";
-		elle.class = "Bard";
-		elle.race = "Harpy";
-		elle.aspect = "Arrogance";
-		elle.weapon = "Metal Claws";
-		elle.ability = "Sonic Strike";
-		elle.face = "chars/faces/harpy.jpg";
-		elle.battler = "chars/battlers/harpy.png";
-		elle.sprite = "chars/sprites/harpy.png";
-
-		var bazba = new character();
-		bazba.name = "Bazba";
-		bazba.id = "bazba";
+		var bazba = new character("bazba", "Warrior", "Lizard", "lizard");
 		bazba.gender = "M";
-		bazba.class = "Warrior";
-		bazba.race = "Lizard";
 		bazba.aspect = "Anger";
 		bazba.weapon = "Pickaxe";
 		bazba.ability = "Dirt Pick";
-		bazba.face = "chars/faces/lizard.jpg";
-		bazba.battler = "chars/battlers/lizard.png";
-		bazba.sprite = "chars/sprites/lizard.png";
 
-		var bleu = new character();
-		bleu.name = "Bleu";
-		bleu.id = "bleu";
+		var bleu = new character("bleu", "Drainer", "Lamia", "lamia");
 		bleu.gender = "F";
-		bleu.class = "Drainer";
-		bleu.race = "Lamia";
 		bleu.aspect = "Mischief";
 		bleu.weapon = "Hair Whip";
 		bleu.ability = "Poison Bite";
-		bleu.face = "chars/faces/lamia.jpg";
-		bleu.battler = "chars/battlers/lamia.png";
-		bleu.sprite = "chars/sprites/lamia.png";
 
-		roster.push(ferid);
-		roster.push(lilka);
-		roster.push(duessel);
-		roster.push(muzet);
-		roster.push(neclord);
-		roster.push(elle);
-		roster.push(bazba);
-		roster.push(bleu);
+		var dojima = new character("dojima", "Alchemist", "Human", "alchemist");
+		dojima.gender = "M";
+		dojima.aspect = "Hate";
+		dojima.weapon = "Battleaxe";
+		dojima.ability = "Vicious Cut";
+
+		var duessel = new character("duessel", "Warrior", "Elf", "malewarrior");
+		duessel.gender = "M";
+		duessel.aspect = "Hate";
+		duessel.weapon = "Battleaxe";
+		duessel.ability = "Vicious Cut";
+
+		var elle = new character("elle", "Bard", "Harpy", "harpy");
+		elle.gender = "F";
+		elle.aspect = "Arrogance";
+		elle.weapon = "Metal Claws";
+		elle.ability = "Sonic Strike";
+
+		var ershin = new character("ershin", "Sorceress", "Human", "witch");
+		ershin.gender = "F";
+		ershin.aspect = "Hate";
+		ershin.weapon = "Battleaxe";
+		ershin.ability = "Vicious Cut";
+
+		var fereydoon = new character("fereydoon", "Lancer", "Human", "lancer");
+		fereydoon.gender = "M";
+		fereydoon.aspect = "Mistrust";
+		fereydoon.weapon = "Twin Daggers";
+		fereydoon.ability = "Stealth Attack";
+
+		var ferid = new character("ferid", "Thief", "Human", "malethief");
+		ferid.gender = "M";
+		ferid.aspect = "Mistrust";
+		ferid.weapon = "Twin Daggers";
+		ferid.ability = "Stealth Attack";
+
+		var gawn = new character("gawn", "Gunner", "Human", "gunner");
+		gawn.gender = "M";
+		gawn.aspect = "Mistrust";
+		gawn.weapon = "Clear Shot";
+		gawn.ability = "Stealth Attack";
+
+		var genis = new character("genis", "Monk", "Human", "malemonk");
+		genis.gender = "M";
+		genis.aspect = "Mistrust";
+		genis.weapon = "Twin Daggers";
+		genis.ability = "Stealth Attack";
+
+		var helga = new character("helga", "Warrior", "Human", "femalewarrior");
+		helga.gender = "F";
+		helga.aspect = "Hate";
+		helga.weapon = "Halberd";
+		helga.ability = "Stealth Attack";
+
+		var marivel = new character("marivel", "Cleric", "Elf", "femalecleric");
+		marivel.gender = "F";
+		marivel.aspect = "Hyperactivity";
+		marivel.weapon = "Tri-Chain Staff";
+		marivel.ability = "Healing Beam";
+
+		var muzet = new character("muzet", "Shapeshifter", "Fairy", "fairy");
+		muzet.gender = "F";
+		muzet.aspect = "Desperation";
+		muzet.weapon = "Magic Powder";
+		muzet.ability = "Makeover";
+
+		var neclord = new character("neclord", "Drainer", "Vampire", "vampire");
+		neclord.gender = "M";
+		neclord.aspect = "Mischief";
+		neclord.weapon = "Draining Gloves";
+		neclord.ability = "Bloodsuck";
+
+		roster.push(albel, alkaid, anise, arche, bazba, bleu, dojima, duessel, elle, ershin, fereydoon, ferid, gawn, genis, helga, marivel, muzet, neclord);
 
 		for(var i = 0; i < roster.length; i++) {
-			jQuery(".charlist").append('<div class="char" id="'+roster[i].id+'"></div>');			
+			jQuery(".charlist").append('<div class="char" id="'+roster[i].name+'"></div>');			
 		}
 
 		jQuery(".char").each(function(i) {
@@ -189,7 +185,7 @@
 				.children(".info")
 					.append('<div class="name">'+roster[i].name+'</div>')
 					.append('<div class="gender">Gender: <span>'+roster[i].gender+'</span></div>')
-					.append('<div class="class">Class: <span>'+roster[i].class+'</span></div>')
+					.append('<div class="class">Class: <span>'+roster[i].job+'</span></div>')
 					.append('<div class="race">Race: <span>'+roster[i].race+'</span></div>')
 					.append('<div class="aspect">Aspect: <span>'+roster[i].aspect+'</span></div>')
 					.append('<div class="weapon">Weapon: <span>'+roster[i].weapon+'</span></div>')
