--- a/arena.html
+++ b/arena.html
@@ -4,249 +4,12 @@
 	<link rel="stylesheet" type="text/css" href="arena.css" />
 </head>
 <body>
-	<canvas id="main" width="1280" height="768"></canvas>
+	<canvas id="layer1" width="1280" height="768"></canvas>
+	<canvas id="layer2" width="1280" height="768"></canvas>
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
 	<script type="text/javascript" src="maps/tournament-arena.json"></script>
 	<script type="text/javascript" src="characters.js"></script>
-	<script type="text/javascript">
-	// $(function() {
-	//   var c = $("canvas")[0].getContext("2d");
-
-	//   function httpGet(theUrl)
-	// 	{
-	//     var xmlHttp = new XMLHttpRequest();
-	//     xmlHttp.open( "GET", theUrl, false ); // false for synchronous request
-	//     xmlHttp.send( null );
-	//     return xmlHttp.responseText;
-	// 	}
-
-	// 	httpGet(window.location.href);
-	// 	//console.log(get);
-
-	//   var scene = {
-	//     layers: [],
-	//     renderLayer: function(layer) {
-	//       // data: [array of tiles, 1-based, position of sprite from top-left]
-	//       // height: integer, height in number of sprites
-	//       // name: "string", internal name of layer
-	//       // opacity: integer
-	//       // type: "string", layer type (tile, object)
-	//       // visible: boolean
-	//       // width: integer, width in number of sprites
-	//       // x: integer, starting x position
-	//       // y: integer, starting y position
-	//       if (layer.type !== "tilelayer" || !layer.opacity) { return; }
-	//       var s = c.canvas.cloneNode(),
-	//           size = scene.data.tilewidth;
-	//       s = s.getContext("2d");
-	//       if (scene.layers.length < scene.data.layers.length) {
-	//         layer.data.forEach(function(tile_idx, i) {
-	//           if (!tile_idx) { return; }
-	//           var img_x, img_y, s_x, s_y,
-	//               tile = scene.data.tilesets[0];
-	//           tile_idx--;
-	//           img_x = (tile_idx % (tile.imagewidth / size)) * size;
-	//           img_y = ~~(tile_idx / (tile.imagewidth / size)) * size;
-	//           s_x = (i % layer.width) * size;
-	//           s_y = ~~(i / layer.width) * size;
-	//           s.drawImage(scene.tileset, img_x, img_y, size, size,
-	//                       s_x, s_y, size, size);
-	//         });
-	//         scene.layers.push(s.canvas.toDataURL());
-	//         c.drawImage(s.canvas, 0, 0);
-	//       }
-	//       else {
-	//         scene.layers.forEach(function(src) {
-	//           var i = $("<img />", { src: "maps/"+src })[0];
-	//           c.drawImage(i, 0, 0);
-	//         });
-	//       }
-	//     },
-	//     renderLayers: function(layers) {
-	//       layers = $.isArray(layers) ? layers : this.data.layers;
-	//       layers.forEach(this.renderLayer);
-	//     },
-	//     loadTileset: function(json) {
-	//       this.data = json;
-	//       this.tileset = $("<img />", { src: json.tilesets[0].image })[0]
-	//       this.tileset.onload = this.renderLayers(this);
-	//     },
-	//     load: function(name) {
-	//       this.loadTileset(data);
-	//     }
-	//   };
-
-	//   scene.load("tournament-arena");
-	// });
-
-	var ground = [
-		/*1*/[129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129],
-		/*2*/[129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129],
-	 	/*3*/[129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129],
-	 	/*4*/[129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129],
-	 	/*5*/[129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129],
-	 	/*6*/[129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129],
-	 	/*7*/[129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129],
-	 	/*8*/[129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129],
-	 	/*9*/[129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129],
-	 	/*10*/[129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129],
-	 	/*11*/[129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129],
-		/*12*/[129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129],
-		/*13*/[129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129],
-		/*14*/[129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129],
-		/*15*/[129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129],
-		/*16*/[129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 113, 113, 113, 113, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129],
-		/*17*/[129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 113, 113, 113, 113, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129],
-		/*18*/[129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 113, 113, 113, 113, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129],
-		/*19*/[129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 113, 113, 113, 113, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129],
-		/*20*/[129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 113, 113, 113, 113, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129],
-		/*21*/[129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 113, 113, 113, 113, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129],
-		/*22*/[129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 113, 113, 113, 113, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129],
-		/*23*/[129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 113, 113, 113, 113, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129],
-		/*24*/[129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 113, 113, 113, 113, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129, 129]
- ];
-
- var layer1 = [
-		/*1*/[0, 0, 0, 196, 197, 198, 199, 0, 160, 161, 161, 161, 161, 162, 0, 160, 161, 161, 161, 161, 161, 161, 161, 162, 0, 160, 161, 161, 161, 161, 162, 196, 197, 198, 199, 0, 0, 0, 0, 0],
-		/*2*/[0, 0, 0, 212, 213, 214, 215, 0, 176, 177, 177, 177, 177, 178, 0, 176, 177, 177, 177, 177, 177, 177, 177, 178, 0, 176, 177, 177, 177, 177, 178, 212, 213, 214, 215, 0, 0, 0, 0, 0],
-	 	/*3*/[0, 0, 0, 228, 229, 230, 231, 0, 192, 193, 193, 193, 193, 194, 0, 192, 193, 193, 193, 193, 193, 193, 193, 194, 0, 192, 193, 193, 193, 193, 194, 228, 229, 230, 231, 0, 0, 0, 0, 0],
-	 	/*4*/[0, 0, 0, 244, 245, 246, 247, 0, 208, 209, 209, 209, 209, 210, 0, 208, 209, 209, 209, 209, 209, 209, 209, 210, 0, 208, 209, 209, 209, 209, 210, 244, 245, 246, 247, 0, 0, 0, 0, 0],
-	 	/*5*/[0, 0, 0, 0, 0, 0, 0, 0, 224, 225, 225, 225, 225, 226, 0, 224, 225, 225, 225, 225, 225, 225, 225, 226, 0, 224, 225, 225, 225, 225, 226, 0, 0, 0, 0, 0, 0, 0, 0, 0],
-	 	/*6*/[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
-	 	/*7*/[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
-	 	/*8*/[208, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 210],
-	 	/*9*/[208, 209, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 209, 210],
-	 	/*10*/[208, 209, 209, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 209, 209, 210],
-	 	/*11*/[208, 209, 209, 209, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 209, 209, 209, 210],
-		/*12*/[208, 209, 209, 209, 209, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 209, 209, 209, 209, 210],
-		/*13*/[208, 209, 209, 209, 209, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 209, 209, 209, 209, 210],
-		/*14*/[224, 225, 225, 225, 225, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 225, 225, 225, 225, 226],
-		/*15*/[0, 0, 0, 0, 0, 0, 0, 0, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 86, 87, 87, 88, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 0, 0, 0, 0, 0, 0, 0, 0],
-		/*16*/[0, 0, 0, 0, 0, 184, 185, 186, 187, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
-		/*17*/[0, 0, 0, 0, 0, 200, 201, 202, 203, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
-		/*18*/[0, 0, 0, 0, 0, 216, 217, 218, 219, 0, 0, 0, 0, 0, 0, 3, 4, 5, 6, 7, 7, 8, 9, 10, 11, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
-		/*19*/[0, 0, 0, 0, 0, 232, 233, 234, 235, 0, 0, 0, 0, 0, 0, 19, 20, 21, 22, 23, 23, 24, 25, 26, 27, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
-		/*20*/[32, 33, 0, 0, 0, 248, 249, 250, 251, 0, 0, 0, 0, 0, 0, 35, 36, 37, 38, 39, 39, 40, 41, 42, 43, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 45, 46],
-		/*21*/[48, 49, 50, 51, 49, 50, 51, 49, 50, 51, 49, 50, 51, 52, 49, 50, 51, 53, 0, 0, 0, 0, 57, 59, 60, 61, 58, 59, 60, 61, 59, 60, 61, 59, 60, 61, 59, 60, 61, 62],
-		/*22*/[64, 65, 66, 67, 65, 66, 67, 65, 66, 67, 65, 66, 67, 68, 65, 66, 67, 69, 0, 0, 0, 0, 73, 75, 76, 77, 74, 75, 76, 77, 75, 76, 77, 75, 76, 77, 75, 76, 77, 78],
-		/*23*/[80, 81, 82, 83, 81, 82, 83, 81, 82, 83, 81, 82, 83, 84, 81, 82, 83, 85, 0, 0, 0, 0, 89, 91, 92, 93, 90, 91, 92, 93, 91, 92, 93, 91, 92, 93, 91, 92, 93, 94],
-		/*24*/[96, 97, 98, 99, 97, 98, 99, 97, 98, 99, 97, 98, 99, 100, 97, 98, 99, 101, 0, 0, 0, 0, 105, 107, 108, 109, 106, 107, 108, 109, 107, 108, 109, 107, 108, 109, 107, 108, 109, 110]
- ];
-
- var layer2 = [
-		/*1*/[150, 134, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 135, 151],
-		/*2*/[150, 150, 134, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 135, 151, 151],
-	 	/*3*/[150, 150, 150, 134, 0, 0, 0, 0, 0, 0, 0, 195, 0, 0, 0, 0, 0, 0, 0, 195, 0, 0, 0, 0, 0, 0, 0, 195, 0, 0, 0, 0, 0, 0, 0, 0, 135, 151, 151, 151],
-	 	/*4*/[150, 150, 150, 150, 134, 0, 0, 0, 0, 0, 0, 211, 0, 0, 0, 0, 0, 0, 0, 211, 0, 0, 0, 0, 0, 0, 0, 211, 0, 0, 0, 0, 0, 0, 0, 135, 151, 151, 151, 151],
-	 	/*5*/[150, 150, 150, 150, 150, 0, 0, 0, 0, 0, 0, 227, 0, 0, 0, 0, 0, 0, 0, 227, 0, 0, 0, 0, 0, 0, 0, 227, 0, 0, 0, 0, 0, 0, 0, 151, 151, 151, 151, 151],
-	 	/*6*/[150, 150, 150, 150, 150, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 151, 151, 151, 151, 151],
-	 	/*7*/[150, 150, 150, 150, 150, 0, 0, 0, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 0, 0, 0, 151, 151, 151, 151, 151],
-	 	/*8*/[150, 150, 150, 150, 150, 0, 0, 0, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 0, 0, 0, 151, 151, 151, 151, 151],
-	 	/*9*/[150, 150, 150, 150, 150, 0, 0, 0, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 0, 0, 0, 151, 151, 151, 151, 151],
-	 	/*10*/[166, 150, 150, 150, 150, 0, 0, 0, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 0, 0, 0, 151, 151, 151, 151, 167],
-	 	/*11*/[0, 166, 150, 150, 150, 0, 0, 0, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 0, 0, 0, 151, 151, 151, 167, 0],
-		/*12*/[0, 0, 166, 150, 150, 0, 0, 0, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 0, 0, 0, 151, 151, 167, 0, 0],
-		/*13*/[180, 181, 182, 166, 150, 0, 0, 0, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 0, 0, 0, 151, 167, 185, 186, 187],
-		/*14*/[196, 197, 198, 199, 166, 0, 0, 0, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 112, 0, 0, 0, 167, 200, 201, 202, 203],
-		/*15*/[212, 213, 214, 215, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 216, 217, 218, 219],
-		/*16*/[228, 229, 230, 231, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 232, 233, 234, 235],
-		/*17*/[244, 245, 246, 247, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 248, 249, 250, 251],
-		/*18*/[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
-		/*19*/[147, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 147],
-		/*20*/[163, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 163],
-		/*21*/[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
-		/*22*/[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
-		/*23*/[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
-		/*24*/[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
- ];
-
-  var tilesetImage = new Image();
-	tilesetImage.src = 'maps/tournament-tile.png';
-	tilesetImage.onload = drawTilemap;
-	var canvas = document.getElementById('main');
-	var ctx = canvas.getContext('2d');
-	var tileSize = 32;       // The size of a tile (32×32)
-	var rowTileCount = 24;   // The number of tiles in a row of our background
-	var colTileCount = 40;   // The number of tiles in a column of our background
-	var imageNumTiles = 16;  // The number of tiles per row in the tileset image
-
-	function drawTilemap() {
-	   for (var r = 0; r < rowTileCount; r++) {
-	      for (var c = 0; c < colTileCount; c++) {
-	        var tile = ground[ r ][ c ];
-	        // Steps 2 and 3
-	        var tileRow = (tile / imageNumTiles) | 0; // Bitwise OR operation
-					var tileCol = (tile % imageNumTiles) | 0;
-					ctx.drawImage(tilesetImage, (tileCol * tileSize), (tileRow * tileSize), tileSize, tileSize, (c * tileSize), (r * tileSize), tileSize, tileSize);
-
-					var tile2 = layer1[ r ][ c ];
-		      var tileRow2 = (tile2 / imageNumTiles) | 0;
-		      var tileCol2 = (tile2 % imageNumTiles) | 0;
-		      ctx.drawImage(tilesetImage, (tileCol2 * tileSize), (tileRow2 * tileSize), tileSize, tileSize, (c * tileSize), (r * tileSize), tileSize, tileSize);
-
-		      var tile3 = layer2[ r ][ c ];
-		      var tileRow3 = (tile3 / imageNumTiles) | 0;
-		      var tileCol3 = (tile3 % imageNumTiles) | 0;
-					ctx.drawImage(tilesetImage, (tileCol3 * tileSize), (tileRow3 * tileSize), tileSize, tileSize, (c * tileSize), (r * tileSize), tileSize, tileSize);
-	      }
-	   }
-	}
-
-	function getParameter(name) {
-    var results = new RegExp('[\?&]' + name + '=([^&#]*)').exec(window.location.href);
-    if (results==null){
-       return null;
-    }
-    else{
-       return results[1] || 0;
-    }
-	}
-
-	function drawCharacters(image, x, y) {
-		image.onload = function() {
-	    for (var r = 0; r < rowTileCount; r++) {
-		    for (var c = 0; c < colTileCount; c++) {
-		    	if(r == y && c == x) {
-		    		var tile = layer2[ r ][ c ];
-			      var imgRow = (tile / imageNumTiles) | 0;
-			      var imgCol = (tile % imageNumTiles) | 0;
-						ctx.drawImage(image, (imgCol * image.height), (imgRow * image.width), image.width, image.height, ((c * tileSize) - image.alt), ((r * tileSize) - image.name), image.width, image.height);	
-		    	}
-		    }	
-		  }   	
-		}		
-	}
-
-	var chosenChar = getParameter("chosenChar");
-	var chosenCharImage = new Image();
-	chosenCharImage.src = roster[chosenChar].sprite;
-	chosenCharImage.width = roster[chosenChar].spw;
-	chosenCharImage.height = roster[chosenChar].sph;
-	drawCharacters(chosenCharImage, 18, 15);
-
-	var rand = roster[Math.floor(Math.random()*roster.length)];
-	if(rand.id != chosenChar) {
-		var chosenChallengerImage = new Image();
-		chosenChallengerImage.src = rand.sprite;
-		chosenChallengerImage.width = rand.spw;
-		chosenChallengerImage.height = rand.sph;
-		drawCharacters(chosenChallengerImage, 21, 15);			
-	}
-
-	var x = 5;
-	for(var i = 0; i < roster.length; i++) {
-		if(roster[i].id != rand.id && roster[i].id != chosenChar) {
-			var spectatorImage = new Image();
-			spectatorImage.src = roster[i].sprite;
-			spectatorImage.width = roster[i].spw;
-			spectatorImage.height = roster[i].sph;
-			spectatorImage.alt = roster[i].distx;
-			spectatorImage.name = roster[i].disty;
-			drawCharacters(spectatorImage, x, 5);
-			x++;
-		}
-	}
-
-	</script>
+	<script type="text/javascript" src="movement.js"></script>
+	<script type="text/javascript" src="arena.js"></script>
 </body>
 </html>
