--- a/arena.html
+++ b/arena.html
@@ -9,6 +9,7 @@
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
 	<script type="text/javascript" src="maps/tournament-arena.json"></script>
 	<script type="text/javascript" src="characters.js"></script>
+	<script type="text/javascript" src="requestAnimFrame.js"></script>
 	<script type="text/javascript" src="movement.js"></script>
 	<script type="text/javascript" src="arena.js"></script>
 </body>
