--- a/sudoku/board.html
+++ b/sudoku/board.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="https://code.jquery.com/jquery-1.9.1.js"></script>
+  <script src="scripts/jquery-1.10.2.min.js"></script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>JS Bin</title>
@@ -47,5 +47,5 @@
   Caption:
   - Required; * Optional; + Recurring;
   -->
-  <script src="board.js" id="jsbin-source-javascript" type="text/javascript"></script></body>
+  <script src="scripts/board.js" id="jsbin-source-javascript" type="text/javascript"></script></body>
 </html>
