--- a/pokemongo2d/index.html
+++ b/pokemongo2d/index.html
@@ -7,11 +7,12 @@
 	<script type="text/javascript" src="scripts/jquery-1.10.2.min.js"></script>
 	<script type="text/javascript" src="scripts/jquery-collision.min.js"></script>
 	<script type="text/javascript" src="scripts/database.js"></script>
+	<script type="text/javascript" src="pokelab.json"></script>
 	<script type="text/javascript" src="scripts/game.js"></script>
 </head>
 <body onload="start()">
 <div class="master">
-	<div class="canvas">
+	<!--<div class="canvas">
 		<div class="start-screen"></div>
 		<div class="home" id="fundoGame">
 			<div class="starterArea">
@@ -26,15 +27,14 @@
 				</div>
 			</div>
 			<div class="pokemonArea"></div>
-			<!--<div class="pokemonArea" style="left: 40%;"></div>
-			<div class="pokemonArea" style="left: 70%;"></div>-->
 		</div>
 		<div class="lab"></div>
 		<div class="battle">
 			<div class="frontArea"></div>
 			<div class="backArea"></div>
 		</div>
-	</div>
+	</div>-->
+	<canvas class="map" id="pokelab"></canvas>
 </div>
 </body>
 </html>
