CSS and schema changes.

--- a/simple-relay-starter/public/index.html
+++ b/simple-relay-starter/public/index.html
@@ -1,5 +1,6 @@
 <!-- include React and Relay scripts (we don't bundle them) -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="css/main.css" />
 <script src=//cdnjs.cloudflare.com/ajax/libs/react/15.3.0/react.min.js></script>
 <script src=//cdnjs.cloudflare.com/ajax/libs/react/15.3.0/react-dom.min.js></script>
 <script src=/relay/relay.min.js></script>
