Changes to tileset.

--- a/pokemongo2d/index.html
+++ b/pokemongo2d/index.html
@@ -34,7 +34,7 @@
 			<div class="backArea"></div>
 		</div>
 	</div>-->
-	<canvas class="map" id="pokelab"></canvas>
+	<canvas class="map" id="pokelab" width="960" height="576"></canvas>
 </div>
 </body>
 </html>
