sprite character additions and resource script added.

--- a/pokemongo2d/index.html
+++ b/pokemongo2d/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/estilos.css" />
 	<script type="text/javascript" src="scripts/jquery-1.10.2.min.js"></script>
 	<script type="text/javascript" src="scripts/jquery-collision.min.js"></script>
+	<script type="text/javascript" src="scripts/resources.js"></script>
 	<script type="text/javascript" src="scripts/database.js"></script>
 	<script type="text/javascript" src="pokelab.json"></script>
 	<script type="text/javascript" src="scripts/game.js"></script>
