--- a/pokemongo2d/index.html
+++ b/pokemongo2d/index.html
@@ -7,8 +7,12 @@
 	<script type="text/javascript" src="scripts/jquery-1.10.2.min.js"></script>
 	<script type="text/javascript" src="scripts/jquery-collision.min.js"></script>
 	<script type="text/javascript" src="scripts/resources.js"></script>
+	<script type="text/javascript" src="scripts/sprite.js"></script>
 	<script type="text/javascript" src="scripts/database.js"></script>
 	<script type="text/javascript" src="pokelab.json"></script>
+	<script type="text/javascript" src="scripts/commands.js"></script>
+	<script type="text/javascript" src="scripts/methods.js"></script>
+	<script type="text/javascript" src="scripts/collisions.js"></script>
 	<script type="text/javascript" src="scripts/game.js"></script>
 </head>
 <body onload="start()">
