--- a/pokemongo2d/index.html
+++ b/pokemongo2d/index.html
@@ -6,6 +6,9 @@
 	<link rel="stylesheet" type="text/css" href="css/estilos.css" />
 	<script type="text/javascript" src="scripts/jquery-1.10.2.min.js"></script>
 	<script type="text/javascript" src="scripts/jquery-collision.min.js"></script>
+</head>
+<body>
+<div class="master">
 	<script type="text/javascript" src="scripts/resources.js"></script>
 	<script type="text/javascript" src="scripts/sprite.js"></script>
 	<script type="text/javascript" src="scripts/database.js"></script>
@@ -14,9 +17,6 @@
 	<script type="text/javascript" src="scripts/methods.js"></script>
 	<script type="text/javascript" src="scripts/collisions.js"></script>
 	<script type="text/javascript" src="scripts/game.js"></script>
-</head>
-<body onload="start()">
-<div class="master">
 	<!--<div class="canvas">
 		<div class="start-screen"></div>
 		<div class="home" id="fundoGame">
@@ -38,8 +38,8 @@
 			<div class="frontArea"></div>
 			<div class="backArea"></div>
 		</div>
-	</div>-->
-	<canvas class="map" id="pokelab" width="960" height="576"></canvas>
+	</div>
+	<canvas class="map" id="pokelab" width="960" height="576"></canvas>-->
 </div>
 </body>
 </html>
