Fixing board randomizer and game completion.

--- a/sudoku/board.html
+++ b/sudoku/board.html
@@ -21,7 +21,7 @@
   <div class="overlay"></div>
   <div class="popup success">
     <p>Congratulations! You finished the puzzle!</p>
-    <button onclick="playGame();closePopup();">Play Again</button>
+    <button onclick="closePopup();">Play Again</button>
   </div>
   <div class="popup failure">
     <p>You still have some wrong numbers to fix!</p>
